# klerk

./: .gitattributes  .gitignore  .travis.yml  HEADER  Pipfile  README.md  build.gradle  chamber.py  congress.py  journal.py  journal_api.py  journal_download.py  journal_pipeline.py  main.py  pyproject.toml  read_pdf.py  scrape_pipeline.py  session.py  settings.gradle  test_journal_api.py
annotate/: build.gradle
annotate/src/main/resources/: congress.txt
annotate/src/test/resources/senate/journal/: 17th-regular_session1-p3.html  17th-regular_session1-p4.html  17th-regular_session2-p1.html
api/: congress_gov.py
collate/: Pipfile  test_congress.py
gradle/wrapper/: gradle-wrapper.properties
klerk-core/: klerk-core.gradle
klerk-core/src/main/resources/: application.yml
klerk-core/src/test/resources/house/journal/: 17th-session1.html  17th-session2.html  17th-session3.html  (+1 more)
notebooks/: journal-1.jsonl  ner.ipynb  ocr.ipynb
src/main/resources/: application.yml
src/test/resources/house/cr/: 18th-HB300-history.html  18th.html
src/test/resources/house/journal/: 17th-session1.html  17th-session2.html  17th-session3.html  17th-session4.html
src/test/resources/journal/image-to-text/: 17th-h-r3-j51.txt  17th-s-r3-j3.txt  journal-3.txt
src/test/resources/senate/cr/: 41.html  not-found.html
src/test/resources/senate/journal/: 17th-regular_session1-p1.html  17th-regular_session1-p2.html
src/test/resources/senate/legislator/: ph-senator-list-oct-6-2019.html  ph-senator-list-oct-6-2019.json
test/resources/senate/journal/: 17th-rs1-journal1.html
(+177 files in other folders)
