[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=3.6.3",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Reijhanniel Jearl Campos", email = "devcsrj@gmail.com"},
]
dependencies = [
    "numpy>=1.24.3",
    "opencv-python>=4.7.0.72",
    "layoutparser>=0.3.4",
    "layoutparser[ocr]>=0.3.4",
    "layoutparser[effdet]>=0.3.4",
    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git@v0.6",
    "torchvision>=0.15.1",
    "bonobo>=0.3.2",
    "spacy>=3.5.2",
    "matplotlib>=3.7.1",
    "ipywidgets>=8.0.6",
    "tqdm>=4.65.0",
    "requests>=2.29.0",
    "beautifulsoup4>=4.12.2",
]
license = {text = "GPL3"}
requires-python = ">=3.8"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
